Add disableJumpDelay